--- a/app/globals.css
+++ b/app/globals.css
@@ -1,24 +1,45 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+
+body {
   display: grid;
   place-items: center;
   min-height: 100vh;
   text-align: center;
+  background: linear-gradient(90deg, blue, lightblue);
 }
-h1{
+
+h1 {
   margin-bottom: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins';
   font-size: 2.55rem;
   color: black;
 }
-input{
+
+input {
   letter-spacing: 3px;
   width: 90%;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  transition: 0.3s;
 }
+
+input:focus {
+  border-color: blue;
+  outline: none;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+}
+
 input::placeholder {
   letter-spacing: 0px;
+}
+
+.container {
+  width: 400px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
 }
