--- a/app/globals.css
+++ b/app/globals.css
@@ -10,22 +10,29 @@ body {
   min-height: 100vh;
   text-align: center;
   background: linear-gradient(90deg, blue, lightblue);
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 h1 {
   margin-bottom: 20px;
-  font-family: 'Poppins';
-  font-size: 2.55rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 35px;
   color: black;
 }
 
 input {
-  letter-spacing: 3px;
+  letter-spacing: 1.5px;
   width: 90%;
+  height: 23px;
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: 0.3s;
+  padding-left: 8px;
+  background-color: #c9c8c8;
 }
 
 input:focus {
@@ -36,10 +43,40 @@ input:focus {
 
 input::placeholder {
   letter-spacing: 0px;
+  font-family: monospace;
+  color: rgba(0, 0, 0, 0.6);
 }
-
 .container {
   width: 400px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
   padding: 20px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  cursor: pointer;
+  width: 30%;
+  height: 33px;
+  font-size: 18px;
+  border: 2px solid rgb(0, 68, 255);
+  border-radius: 8px;
+  background-color: rgb(0, 68, 255);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+  letter-spacing: 1px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+button:hover {
+  transform: scale(1.05);
+  background-color: rgb(0, 119, 255);
+  border-color: rgb(0, 89, 255);
+}
+button:active{
+  transform: scale(0.95);
+  background-color: rgb(0, 68, 255);
+  border-color: rgb(0, 68, 255);
 }
